<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="app_name">MTConnect</string>
	<string name="splash_screen">SplashScreen</string>
	<string name="tvId">ID :</string>
	<string name="tvServerName">Name :</string>
	<string name="tvUsername">Connection :</string>
	<string name="tvPassword">Camera :</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnCurrent">Current</string>
    <string name="btnCamera">Camera View</string>
    <string name="btnAdd">Add</string>
    <string name="btnDelete">Delete</string>
    <string name="btnExit">Exit</string>
    <string name="listEmpty">Press the Menu Button to Add/Delete Connections</string>
    <string name="tvSpindle">Spindle Speed :</string>
    <string name="tvEmergencyStop">Emergency Stop :</string>
    <string name="tvAlarm">Alarm/Message :</string>
    <string name="tvPower">Power Status :</string>
    <string name="tvPathf">Path Feedrate :</string>
    <string name="tvPathp">Path Position :</string>
    <string name="tvBlock">Block :</string>
    <string name="tvControl">Controller Mode :</string>
    <string name="tvLine">Line :</string>
    <string name="tvProgram">Program :</string>
    <string name="tvExecution">Execution :</string>
    <string name="tvXpos">X Linear Position :</string>
    <string name="tvYpos">Y Linear Position :</string>
    <string name="tvZpos">Z Linear Position :</string>
</resources>