<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/tvId" />
	<TextView android:id="@+id/tvId"  android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="" />
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/tvServerName" />
	<EditText android:id="@+id/etServerName" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/tvUsername" />
	<EditText android:id="@+id/etUsername" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/tvPassword" />
	<EditText android:id="@+id/etPassword" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/btnSave" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/btnSave" />
		<Button android:id="@+id/btnCancel" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_toRightOf="@id/btnSave"
			android:layout_alignTop="@id/btnSave" android:text="@string/btnCancel" />
		<Button android:id="@+id/btnCurrent" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_toRightOf="@id/btnCancel"
			android:layout_alignTop="@id/btnCancel" android:text="@string/btnCurrent" />
		<Button android:id="@+id/btnCamera" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_toRightOf="@id/btnCurrent"
			android:layout_alignTop="@id/btnCurrent" android:text="@string/btnCamera" />
	</RelativeLayout>
</LinearLayout>