<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<ScrollView 
android:orientation="vertical" android:gravity="center" 
android:layout_width="wrap_content" android:layout_height="wrap_content"> 
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
   android:stretchColumns="1"
   android:background="#000000">   
 <TableRow android:background="#ffffff" android:layout_margin="2dip">        
<TextView   
         android:text="@string/tvSpindle" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>  
      <TextView
      android:id="@+id/tvSpindle"           
 android:text=""     
       android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/>  
  </TableRow>  
  <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvEmergencyStop" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvEmergencyStop"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvAlarm" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvAlarm"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvPower" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvPower"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvPathf" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvPathf"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvPathp" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvPathp"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvBlock" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvBlock"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvControl" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvControl"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvLine" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvLine"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvProgram" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvProgram"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvExecution" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvExecution"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvXpos" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvXpos"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvYpos" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvYpos"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
     <TableRow android:background="#ffffff" android:layout_margin="2dip">   
    <TextView   
         android:text="@string/tvZpos" 
           android:padding="3dip" 
           android:background="#000000" android:layout_margin="2dip"/>    
    <TextView 
     android:id="@+id/tvZpos"     
     android:text=""  
         android:gravity="right"      
      android:padding="3dip" 
      android:background="#000000" android:layout_margin="2dip"/> 
   </TableRow>
</TableLayout>
</ScrollView>						
    <ListView android:id="@+id/android:list" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"/>
</LinearLayout>
